[gd_scene load_steps=9 format=3 uid="uid://b1bhw2oormhm0"]

[ext_resource type="Script" path="res://interactables/chest/chest.gd" id="1_6xca0"]
[ext_resource type="PackedScene" uid="uid://byqmjn8uor2yj" path="res://interactables/key_door/key.tscn" id="2_0p8la"]
[ext_resource type="Texture2D" uid="uid://bb74mmf3rdg4r" path="res://art/objects/Chest_01_Locked.png" id="2_vwdyi"]
[ext_resource type="Texture2D" uid="uid://ctvthkqtgqmgm" path="res://art/objects/Chest_01_Unlocked.png" id="3_if3jx"]
[ext_resource type="PackedScene" uid="uid://d5ax350x743i" path="res://interactables/interactable.tscn" id="4_ya8nx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4tvle"]
size = Vector2(50, 40)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_cloag"]
properties/0/path = NodePath(".:is_locked")
properties/0/spawn = true
properties/0/replication_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_bllba"]
radius = 40.0

[node name="Chest" type="Node2D"]
script = ExtResource("1_6xca0")
key_scene = ExtResource("2_0p8la")

[node name="ChestLocked" type="Sprite2D" parent="."]
position = Vector2(0, -29)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_vwdyi")

[node name="ChestUnlocked" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -29)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_if3jx")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-3, -20.5)
shape = SubResource("RectangleShape2D_4tvle")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_cloag")

[node name="Interactable" parent="." instance=ExtResource("4_ya8nx")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(0, -20)
shape = SubResource("CircleShape2D_bllba")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://interactables/key_door/key.tscn")
spawn_path = NodePath("../KeySpawn")
spawn_limit = 1

[node name="KeySpawn" type="Node2D" parent="."]
position = Vector2(0, -28)

[connection signal="delta_synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_delta_synchronized"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
